Fixed Tab alignment and added tab content to first tab. Needs smoother animation on hide

--- a/Prototype GUI/gui_test1.css
+++ b/Prototype GUI/gui_test1.css
@@ -106,3 +106,22 @@ body {
 .accordTab {
 	border-bottom: 1px solid lightgrey;
 }
+
+.accordContent {
+	border-right: 1px solid lightgrey;
+	border-left: 1px solid lightgrey;
+}
+
+.animate-if.ng-enter, .animate-if.ng-leave {
+  transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+}
+
+.animate-if.ng-enter,
+.animate-if.ng-leave.ng-leave-active {
+  opacity:0;
+}
+
+.animate-if.ng-leave,
+.animate-if.ng-enter.ng-enter-active {
+  opacity:1;
+}
